Fix wrap en fragmentos de código. (#39)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,10 @@
   display: inline;
 }
 
+pre code {
+  white-space: pre;
+}
+
 .table-borderless > tbody > tr > td,
 .table-borderless > tbody > tr > th,
 .table-borderless > tfoot > tr > td,
